Revert "Fix stats and remove Manage Groups dialog box option"
This reverts commit 15d912e58e7832ab99f4ac80170f41c4f88bebe2.